stateDiagram-v2
    [*] --> INITIAL: 用户提交
    INITIAL --> HYPOTHESIS_GEN: 假设准备就绪
    HYPOTHESIS_GEN --> PHOENIX_REWRITE: 物理公理冲突
    HYPOTHESIS_GEN --> RED_ATTACK: 开始红方攻击
    PHOENIX_REWRITE --> PHOENIX_RETRY: 重写完成
    PHOENIX_REWRITE --> HARD_FAILURE: 不可恢复冲突
    RED_ATTACK --> BLUE_DEFENSE: 开始蓝方答辩
    BLUE_DEFENSE --> SUCCESS: 成功阈值达成
    BLUE_DEFENSE --> PHOENIX_PATCH: 答辩失败
    BLUE_DEFENSE --> SCORE_STAGNANT: 分数停滞检测
    SCORE_STAGNANT --> EXTERNAL_COMPENSATION: 停滞触发
    EXTERNAL_COMPENSATION --> PHOENIX_PATCH: 补偿完成
    PHOENIX_PATCH --> PHOENIX_RETRY: 补丁应用完成
    PHOENIX_RETRY --> SUCCESS: 防御通过
    PHOENIX_RETRY --> PHOENIX_PATCH: 答辩失败
    PHOENIX_RETRY --> PHOENIX_ROLLBACK: 攻击类型无法解决
    PHOENIX_ROLLBACK --> PHOENIX_RETRY: 回溯完成
    HYPOTHESIS_GEN --> MAX_PHOENIX_EXCEEDED: 迭代上限
    PHOENIX_PATCH --> MAX_PHOENIX_EXCEEDED: 迭代上限
    PHOENIX_RETRY --> MAX_PHOENIX_EXCEEDED: 迭代上限
    EXTERNAL_COMPENSATION --> MAX_PHOENIX_EXCEEDED: 迭代上限
    SUCCESS --> [*]
    HARD_FAILURE --> [*]
    MAX_PHOENIX_EXCEEDED --> [*]